--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,7 +5,7 @@ nav {
   align-items: center;
   background-color: #333;
   padding: 20px;
-  width: 100%;  /* ナビゲーションバーの幅を画面いっぱいに拡張 */
+  width: 100%; /* ナビゲーションバーの幅を画面いっぱいに拡張 */
 }
 
 /* ナビゲーションリンクを含むリスト */
@@ -27,26 +27,28 @@ nav ul li a {
   color: white;
   text-decoration: none;
   padding: 10px 20px;
-  transition: color 0.3s, background-color 0.3s;
+  transition:
+    color 0.3s,
+    background-color 0.3s;
 }
 
 nav ul li a:hover,
 nav ul li a:focus {
-  color: #4CAF50; /* ホバー時のテキスト色 */
+  color: #4caf50; /* ホバー時のテキスト色 */
   background-color: #ffffff26; /* ホバー時の背景色 */
 }
 
 .active-link {
-  border-bottom: 3px solid #4CAF50; /* アクティブリンクのスタイル */
+  border-bottom: 3px solid #4caf50; /* アクティブリンクのスタイル */
 }
 
 /* タイル型レイアウトの基本スタイル */
 .tile {
-  width: 30%;  /* タイルの幅 */
+  width: 30%; /* タイルの幅 */
   margin: 10px; /* タイル間のマージン */
   background-color: #f5f5f5; /* タイルの背景色 */
   padding: 20px; /* タイルのパディング */
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1); /* 影を付ける */
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* 影を付ける */
   transition: transform 0.3s; /* トランジションで動きをつける */
 }
 
